<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Authenticator</string>
    <string name="device_account">oAuth</string>
    <string name="form_account">Web Form</string>
    <string name="windows_account">Windows</string>
    <string name="basic_account">HTTP Basic</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Get Data</string>
    <string name="domain">Domain</string>
    <string name="digest">Digest</string>
    <string name="hmac">HMAC</string>
</resources>
