<TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:stretchColumns="*">
    <TableRow>
        <Button
                android:id="@+id/forms"
                style="@style/AuthButton"
                android:text="@string/form_account"/>
        <Button
                android:id="@+id/basic"
                style="@style/AuthButton"
                android:text="@string/basic_account"/>
    </TableRow>
    <TableRow>
        <Button
                android:id="@+id/windows"
                style="@style/AuthButton"
                android:text="@string/windows_account"/>
        <Button
                android:id="@+id/device"
                style="@style/AuthButton"
                android:text="@string/device_account"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/digest"
            style="@style/AuthButton"
            android:text="@string/digest"/>
        <Button
            android:id="@+id/hmac"
            style="@style/AuthButton"
            android:text="@string/hmac"/>
    </TableRow>

</TableLayout>